# unitree_sdk2_python

./: .gitignore  LICENSE  MANIFEST.in  README zh.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package-action.yml
example/: test_crc.py
example/a2/audio/: a2_audio_client_example.py  a2_audio_client_play_wav.py
example/a2/sport/: a2_sport_client.py  a2_sport_state.py
example/as2/sport/: as2_sport_client.py  as2_sport_state.py
example/b2/camera/: camera_opencv.py  capture_image.py
example/b2/high_level/: b2_sport_client.py
example/b2/low_level/: b2_stand_example.py
example/b2w/high_level/: b2w_sport_client.py
example/b2w/low_level/: b2w_stand_example.py  unitree_legged_const.py
example/front_camera/: camera_opencv.py  capture_image.py
example/g1/: readme.md
example/g1/audio/: g1_audio_client_example.py  g1_audio_client_play_wav.py  g1_audio_mic_record_udp.py  wav.py
example/g1/high_level/: g1_arm5_sdk_dds_example.py  g1_arm7_sdk_dds_example.py  g1_arm_action_example.py  g1_loco_client_example.py
example/g1/low_level/: g1_ankle_swing_example.py  g1_low_level_example.py
example/go2/: pose_and_capture.py
example/go2/audiohub/: megaphone_example.py
example/go2/high_level/: go2_sport_client.py  go2_utlidar_switch.py
example/go2/low_level/: go2_stand_example.py
example/go2w/high_level/: go2w_sport_client.py
example/go2w/low_level/: go2w_stand_example.py
example/h1/high_level/: h1_loco_client_example.py
example/h1/low_level/: h1_low_level_example.py  unitree_legged_const.py
example/h1_2/low_level/: h1_2_low_level_example.py
example/h2/high_level/: h2_arm_sdk_dds_example.py  h2_loco_client_example.py
example/h2/low_level/: h2_ankle_swing_example.py
example/helloworld/: publisher.py  subscriber.py  user_data.py
example/hg/: arm_sdk.py  low_cmd.py
example/high_level/: read_highstate.py  sportmode_test.py
example/low_level/: lowlevel_control.py  read_lowstate.py  unitree_legged_const.py
example/motionSwitcher/: motion_switcher_example.py
example/obstacles_avoid/: obstacles_avoid_move.py
example/obstacles_avoid_switch/: obstacles_avoid_switch.py
example/r1/front_camera/: camera_opencv.py  capture_image.py
example/r1/high_level/: r1_loco_client_example.py
example/r1/low_level/: r1_ankle_swing_example.py
example/vui_client/: vui_client_example.py
example/wireless_controller/: wireless_controller.py  wireless_controller_g1.py
tests/: check_init.py
unitree_sdk2py/: __init__.py
unitree_sdk2py/a2/audio/: audio_api.py  audio_client.py
unitree_sdk2py/a2/sport/: sport_api.py  sport_client.py
unitree_sdk2py/as2/sport/: sport_api.py  sport_client.py
unitree_sdk2py/b2/: __init__.py
unitree_sdk2py/b2/back_video/: __init__.py  back_video_api.py  back_video_client.py
unitree_sdk2py/b2/front_video/: __init__.py  front_video_api.py  front_video_client.py
unitree_sdk2py/b2/robot_state/: __init__.py  robot_state_api.py  robot_state_client.py
unitree_sdk2py/b2/sport/: __init__.py  sport_api.py  sport_client.py
unitree_sdk2py/b2/vui/: __init__.py
unitree_sdk2py/comm/: __init__.py
unitree_sdk2py/comm/motion_switcher/: __init__.py  motion_switcher_api.py  motion_switcher_client.py
unitree_sdk2py/core/: __init__.py  channel.py  channel_config.py  channel_name.py
unitree_sdk2py/g1/: __init__.py
unitree_sdk2py/g1/arm/: __init__.py  g1_arm_action_api.py  g1_arm_action_client.py
unitree_sdk2py/g1/audio/: __init__.py  g1_audio_api.py  g1_audio_client.py
unitree_sdk2py/g1/loco/: __init__.py  g1_loco_api.py  g1_loco_client.py
unitree_sdk2py/go2/: __init__.py
unitree_sdk2py/go2/audiohub/: audiohub_api.py  audiohub_client.py
unitree_sdk2py/go2/obstacles_avoid/: __init__.py  obstacles_avoid_api.py  obstacles_avoid_client.py
unitree_sdk2py/go2/robot_state/: robot_state_api.py  robot_state_client.py
unitree_sdk2py/go2/sport/: sport_api.py  sport_client.py
unitree_sdk2py/go2/video/: __init__.py  video_api.py  video_client.py
unitree_sdk2py/go2/vui/: vui_api.py  vui_client.py
unitree_sdk2py/h1/: __init__.py
unitree_sdk2py/h1/loco/: __init__.py  h1_loco_api.py  h1_loco_client.py
unitree_sdk2py/h2/loco/: h2_loco_api.py  h2_loco_client.py
unitree_sdk2py/idl/: __init__.py  default.py
unitree_sdk2py/idl/builtin_interfaces/: __init__.py
unitree_sdk2py/idl/builtin_interfaces/msg/: __init__.py
unitree_sdk2py/idl/geometry_msgs/: __init__.py
unitree_sdk2py/idl/geometry_msgs/msg/: __init__.py
unitree_sdk2py/idl/nav_msgs/: __init__.py
unitree_sdk2py/idl/nav_msgs/msg/: __init__.py
unitree_sdk2py/idl/sensor_msgs/: __init__.py
unitree_sdk2py/idl/sensor_msgs/msg/: __init__.py
unitree_sdk2py/idl/std_msgs/: __init__.py
unitree_sdk2py/idl/std_msgs/msg/: __init__.py
unitree_sdk2py/idl/unitree_api/: __init__.py
unitree_sdk2py/idl/unitree_api/msg/: __init__.py
unitree_sdk2py/idl/unitree_go/: __init__.py
unitree_sdk2py/idl/unitree_go/msg/: __init__.py
unitree_sdk2py/idl/unitree_hg/: .idlpy_manifest  __init__.py
unitree_sdk2py/idl/unitree_hg/msg/: .idlpy_manifest  __init__.py
unitree_sdk2py/r1/loco/: r1_loco_api.py  r1_loco_client.py
unitree_sdk2py/r1/video/: video_api.py  video_client.py
unitree_sdk2py/rpc/: __init__.py  client.py  client_base.py  client_stub.py  internal.py  lease_client.py  lease_server.py  request_future.py  server.py  server_base.py  server_stub.py
unitree_sdk2py/test/client/: obstacles_avoid_client_example.py  robot_service_client_example.py  sport_client_example.py  video_client_example.py  vui_client_example.py
unitree_sdk2py/test/crc/: test_crc.py
unitree_sdk2py/test/helloworld/: helloworld.py  publisher.py  subscriber.py
unitree_sdk2py/test/lowlevel/: lowlevel_control.py  read_lowstate.py  sub_lowstate.py
unitree_sdk2py/test/platform/: test_timerfd.py
unitree_sdk2py/test/rpc/: test_api.py  test_client_example.py  test_server_example.py
unitree_sdk2py/utils/: bqueue.py  clib_lookup.py  crc.py  future.py  hz_sample.py  joystick.py  singleton.py  thread.py  timerfd.py
(+76 files in other folders)
