[project]
name = "unitree_sdk2py"
version = "1.0.1"
description = "Unitree robot sdk version 2 for python"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
license = { text = "BSD-3-Clause" }
authors = [
  { name = "UnitreeRobotics", email = "unitree@unitree.com" }
]
dependencies = [
  # macOS x86_64
  "cyclonedds @ https://github.com/carlosdp/cyclonedds-python/releases/download/0.10.5/cyclonedds-0.10.5-cp311-cp311-macosx_10_9_x86_64.whl ; python_version >= '3.11' and python_version < '3.12' and sys_platform == 'darwin' and platform_machine == 'x86_64'",
  "cyclonedds @ https://github.com/carlosdp/cyclonedds-python/releases/download/0.10.5/cyclonedds-0.10.5-cp312-cp312-macosx_10_9_x86_64.whl ; python_version >= '3.12' and python_version < '3.13' and sys_platform == 'darwin' and platform_machine == 'x86_64'",
  "cyclonedds @ https://github.com/carlosdp/cyclonedds-python/releases/download/0.10.5/cyclonedds-0.10.5-cp313-cp313-macosx_10_13_x86_64.whl ; python_version >= '3.13' and python_version < '3.14' and sys_platform == 'darwin' and platform_machine == 'x86_64'",

  # macOS arm64
  "cyclonedds @ https://github.com/carlosdp/cyclonedds-python/releases/download/0.10.5/cyclonedds-0.10.5-cp311-cp311-macosx_11_0_arm64.whl ; python_version >= '3.11' and python_version < '3.12' and sys_platform == 'darwin' and platform_machine == 'arm64'",
  "cyclonedds @ https://github.com/carlosdp/cyclonedds-python/releases/download/0.10.5/cyclonedds-0.10.5-cp312-cp312-macosx_11_0_arm64.whl ; python_version >= '3.12' and python_version < '3.13' and sys_platform == 'darwin' and platform_machine == 'arm64'",
  "cyclonedds @ https://github.com/carlosdp/cyclonedds-python/releases/download/0.10.5/cyclonedds-0.10.5-cp313-cp313-macosx_11_0_arm64.whl ; python_version >= '3.13' and python_version < '3.14' and sys_platform == 'darwin' and platform_machine == 'arm64'",

  # Linux aarch64 (manylinux)
  "cyclonedds @ https://github.com/carlosdp/cyclonedds-python/releases/download/0.10.5/cyclonedds-0.10.5-cp311-cp311-manylinux2014_aarch64.manylinux_2_17_aarch64.manylinux_2_28_aarch64.whl ; python_version >= '3.11' and python_version < '3.12' and sys_platform == 'linux' and platform_machine == 'aarch64'",
  "cyclonedds @ https://github.com/carlosdp/cyclonedds-python/releases/download/0.10.5/cyclonedds-0.10.5-cp312-cp312-manylinux2014_aarch64.manylinux_2_17_aarch64.manylinux_2_28_aarch64.whl ; python_version >= '3.12' and python_version < '3.13' and sys_platform == 'linux' and platform_machine == 'aarch64'",
  "cyclonedds @ https://github.com/carlosdp/cyclonedds-python/releases/download/0.10.5/cyclonedds-0.10.5-cp313-cp313-manylinux2014_aarch64.manylinux_2_17_aarch64.manylinux_2_28_aarch64.whl ; python_version >= '3.13' and python_version < '3.14' and sys_platform == 'linux' and platform_machine == 'aarch64'",

  # Linux x86_64 (manylinux)
  "cyclonedds @ https://github.com/carlosdp/cyclonedds-python/releases/download/0.10.5/cyclonedds-0.10.5-cp311-cp311-manylinux2014_x86_64.manylinux_2_17_x86_64.manylinux_2_28_x86_64.whl ; python_version >= '3.11' and python_version < '3.12' and sys_platform == 'linux' and platform_machine == 'x86_64'",
  "cyclonedds @ https://github.com/carlosdp/cyclonedds-python/releases/download/0.10.5/cyclonedds-0.10.5-cp312-cp312-manylinux2014_x86_64.manylinux_2_17_x86_64.manylinux_2_28_x86_64.whl ; python_version >= '3.12' and python_version < '3.13' and sys_platform == 'linux' and platform_machine == 'x86_64'",
  "cyclonedds @ https://github.com/carlosdp/cyclonedds-python/releases/download/0.10.5/cyclonedds-0.10.5-cp313-cp313-manylinux2014_x86_64.manylinux_2_17_x86_64.manylinux_2_28_x86_64.whl ; python_version >= '3.13' and python_version < '3.14' and sys_platform == 'linux' and platform_machine == 'x86_64'",

  "fastcrc>=0.3.2",
  "numpy",
  "opencv-python",
]

[project.urls]
"Source Code" = "https://github.com/unitreerobotics/unitree_sdk2_python"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["unitree_sdk2py", "unitree_sdk2py.*"]
